--- a/LoadDatasets .ipynb
+++ b/LoadDatasets .ipynb
@@ -16,6 +16,7 @@
     "    FileName = []\n",
     "    if SingleFile : \n",
     "        FileName.append(Path + Extension )\n",
+    "        Path = ''\n",
     "    else : \n",
     "        for File in os.listdir(os.path.dirname(Path)):\n",
     "            if File.endswith(Extension):\n",
