loaddataset image added

--- a/LoadDatasets .ipynb
+++ b/LoadDatasets .ipynb
@@ -11,7 +11,7 @@
     "import os\n",
     "\n",
     "\n",
-    "def LoadDataset ( Path , Extension , SingleFile ) :\n",
+    "def LoadDataset ( Path , Extension , SingleFile, ImageType ) :\n",
     "    Datasets = []\n",
     "    FileName = []\n",
     "    if SingleFile : \n",
@@ -19,8 +19,12 @@
     "        Path = ''\n",
     "    else : \n",
     "        for File in os.listdir(os.path.dirname(Path)):\n",
+    "            if ImageType : \n",
+    "                FileName.append(File) \n",
+    "                continue \n",
     "            if File.endswith(Extension):\n",
     "                FileName.append(File) \n",
+    "\n",
     "    #Use this to check Correct file is added or not\n",
     "    #print(FileName)\n",
     "    if Extension == \".csv\" :\n",
@@ -31,9 +35,23 @@
     "                for EachRow in Reader:\n",
     "                    Dataset.append(EachRow)\n",
     "            Datasets.append(Dataset)\n",
+    "    if ImageType : \n",
+    "        for EachFileName in FileName : \n",
+    "            img = cv2.imread(Path+EachFileName)\n",
+    "            Datasets.append(img)\n",
     "    if len(Datasets) == 1 :\n",
     "        Datasets = Datasets[0]\n",
     "    return Datasets , FileName "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LoadDataset(\"location/\", \"*\" , False ,True ) # for all images in folder\n",
+    "LoadDataset(\"location/\", \".csv\" , False ,False ) # for all .csv in folder\n"
    ]
   }
  ],
